Ch 4 - URL Mapping with Matrix Variables

--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,13 @@ repositories {
 
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    compile 'org.springframework.boot:spring-boot-starter-social-twitter'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.2.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.2.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-social-twitter:1.2.5.RELEASE'
     compile 'org.webjars:materializecss:0.97.0'
     compile 'org.webjars:jquery:2.1.4'
     compile 'org.apache.commons:commons-lang3:3.4'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.2.5.RELEASE'
 }
 
 
