--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.social.twitter.app-secret=5X9t1zvErylSFkaCT9Gqo8JIPXbSBpTXuixiueQ1CVR6rd3
 logging.level.org.springframework.web=DEBUG
 spring.messages.cache-seconds=0
 spring.mvc.locale=fr
+upload.pictures.uploadPath=file:./pictures
+upload.pictures.anonymousPicture=classpath:/images/anonymous.png
