--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'org.webjars:materializecss:0.97.0'
     compile 'org.webjars:jquery:2.1.4'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.1'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.1'
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.2.5.RELEASE'
 }
 
