--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.messages.cache-seconds=0
 spring.mvc.locale=fr
 upload.pictures.uploadPath=file:./pictures
 upload.pictures.anonymousPicture=classpath:/images/anonymous.png
+endpoints.shutdown.enabled=true
