Finished Ch 6 - Distributed sessions.

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.2.5.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-social-twitter:1.2.5.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-security:1.2.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-redis:1.2.5.RELEASE'
+    compile 'org.springframework.session:spring-session:1.0.2.RELEASE'
     compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity3:2.1.2.RELEASE'
     compile 'org.webjars:materializecss:0.97.0'
     compile 'org.webjars:jquery:2.1.4'
